--- a/src/app/components/alert-manager/alert-manager.component.html
+++ b/src/app/components/alert-manager/alert-manager.component.html
@@ -7,15 +7,17 @@
   
   <!-- Form per creare nuovo alert -->
   <div class="alert-form">
-    <div class="form-group">
-      <label>Simbolo:</label>
-      <input 
-        type="text" 
-        [(ngModel)]="newAlert.symbol" 
-        [value]="filterBySymbol || newAlert.symbol"
-        placeholder="BTCUSDT" 
-        class="form-input">
-    </div>
+  <div class="form-group">
+    <label>Simbolo:</label>
+    <input 
+      type="text" 
+      [(ngModel)]="newAlert.symbol" 
+      placeholder="BTCUSDT" 
+      class="form-input">
+  </div>
+  
+  <!-- ... resto del form ... -->
+</div>
     
     <div class="form-group">
       <label>Condizione:</label>
@@ -62,4 +64,3 @@
       <p *ngIf="!filterBySymbol">Nessun alert configurato</p>
     </div>
   </div>
-</div>
